# Kmeans-parallel

./: CHANGELOG.md  Kmeans-parallel.cabal  Kmeans-parallel.eventlog  README.md  clusters  input.txt  params
app/: GenSample.hs  KMeansCore.hs  Kmeans.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
